修复图片相对路径

--- a/Java/1.JVM/1.jvm-memory-area.md
+++ b/Java/1.JVM/1.jvm-memory-area.md
@@ -14,7 +14,7 @@
 
 ## 虚拟机栈
 
-![image-20210625222547697](F:\03_CODE-MINE\knowledge-base\Java\1.JVM\assets\image-20210625222547697.png)
+![image-20210625222547697](./assets/image-20210625222547697.png)
 
 虚拟机栈中存放的是方法执行过程中的数据。当JVM启动一个线程时，会为其分配一个独立的栈空间。每调用一个方法都会在栈中创建一个栈帧。
 
