--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -2,11 +2,17 @@
 
 ## 概述
 
-了解完jvm内存区域的知识，必然会引申到jvm的垃圾回收机制。垃圾回收(Garbage Collection, GC)，简单来讲就是清理掉jvm内存中的垃圾对象，以释放空间，更有效地利用内存。
+了解完jvm内存区域的知识，必然会引申到jvm的垃圾回收机制。**垃圾回收(Garbage Collection, GC)**，简单来讲就是清理掉jvm内存中的垃圾对象，以释放空间，更有效地利用内存。
 
 ## 如何判断垃圾
 
 ### 引用计数法
 
- Java中，使用一个对象必须通过引用来进行。那么是不是可以这样认为：当一个对象没有有效的引用指向它时，
+ Java中，使用一个对象必须通过引用来进行。那么是不是可以这样认为：*当一个对象没有有效的引用指向它时，这个对象差不多可以被干掉了。*那么我们给每一个对象加一个`引用计数器`，每有一处引用指向它时，计数器+1，当引用失效时，计数器-1。需要的时候，检查对象的计数器，当计数器归0时，认定当前对象为可回收。
+
+但是，引用计数法无法解决对象的**循环引用**问题。
+
+### 可达性分析
+
+为了解决上面的问题，Java采用了***可达性分析***算法
 
