--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -12,7 +12,9 @@
 
 但是，引用计数法无法解决对象的**循环引用**问题。
 
+![image-20210627102532614](assets/image-20210627102532614.png)
+
 ### 可达性分析
 
-为了解决上面的问题，Java采用了***可达性分析***算法
+为了解决上面的问题，Java采用了***可达性分析***算法。
 
