--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -16,5 +16,13 @@
 
 ### 可达性分析
 
-为了解决上面的问题，Java采用了***可达性分析***算法。
+为了解决上面的问题，Java采用了***可达性分析***算法。其思想是，通过一系列`GC Roots`对象作为起点进行搜索，如果在`GC Roots`对象和一个对象之间没有可达路径，则认为该对象是不可达的。但是不可达对象并不等价于可回收对象，判定为不可达对象要变为可回收对象，至少需要经过两次标记过程。两次标记后仍是不可达对象的，将面临回收。
 
+![image-20210627112039313](assets/image-20210627112039313.png)
+
+可作为GC Roots的对象包括但不限于如下几种：
+
+1. 虚拟机栈(栈帧中的本地变量表)中引用的对象
+2. 方法区中静态属性引用的对象
+3. 方法区中常量引用的对象
+4. 本地方法栈中引用的对象
