--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -12,13 +12,13 @@
 
 但是，引用计数法无法解决对象的**循环引用**问题。
 
-![image-20210627102532614](assets/image-20210627102532614.png)
+![image-20210627130252475](assets/image-20210627130252475.png)
 
 ### 可达性分析
 
 为了解决上面的问题，Java采用了***可达性分析***算法。其思想是，通过一系列`GC Roots`对象作为起点进行搜索，如果在`GC Roots`对象和一个对象之间没有可达路径，则认为该对象是不可达的。但是不可达对象并不等价于可回收对象，判定为不可达对象要变为可回收对象，至少需要经过两次标记过程。两次标记后仍是不可达对象的，将面临回收。
 
-![image-20210627112039313](assets/image-20210627112039313.png)
+![image-20210627130330958](assets/image-20210627130330958.png)
 
 可作为GC Roots的对象包括但不限于如下几种：
 
@@ -26,3 +26,13 @@
 2. 方法区中静态属性引用的对象
 3. 方法区中常量引用的对象
 4. 本地方法栈中引用的对象
+
+## 垃圾回收算法
+
+### 标记清除法
+
+标记清除法是将垃圾清除分为两个阶段：
+
+1. 标记：从根节点开始标记出需要回收的对象
+2. 清除：清理需要回收的对象，回收空间
+
