jvm gc 垃圾回收算法

--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -36,3 +36,32 @@
 1. 标记：从根节点开始标记出需要回收的对象
 2. 清除：清理需要回收的对象，回收空间
 
+![image-20210627132405023](assets/image-20210627132405023.png)
+
+标记的过程采用`可达性分析算法`，这样虽然能解决循环引用问题，但是标记清除算法有明显的缺点：
+
+- 效率低，需要两次遍历
+- 清理出的空间碎片化严重
+
+### 标记整理（压缩）法
+
+针对标记清除法空间碎片化的缺点，有人提出了标记整理法（Mark-Compact），其标记阶段与标记清除法相同，但在标记完对象后，将所有存活的对象向内存空间的一端移动，然后直接清理掉端边界外的对象。
+
+![image-20210627133746906](assets/image-20210627133746906.png)
+
+这样就解决了空间碎片化的特点，但是效率略低。
+
+### 复制算法
+
+复制算法是将内存空间划分为大小相同的两块，每次只使用其中一块内存，在垃圾回收时，将存活对象复制到另一块内存空间中，然后将当前内存空间清空，并交换两块内存角色。
+
+![image-20210627135824869](assets/image-20210627135824869.png)
+
+很明显的，其最大的缺点就是**浪费空间**，但是它快啊，在存活对象少的情况下，复制操作少，效率高。但如果存活对象多的话，就不太合适了。
+
+### 分代收集法
+
+分代收集法是目前最常见的JVM垃圾回收策略，其思想是根据对象的不同生命周期将内存划分为不同的区域。一般划分为**新生代（Young Generation）**和**老年代（Tenured/Old Generation）**。新生代的特点是每次GC都会有大量对象被回收，而老年代每次GC时只有少量对象被回收。结合上述几种垃圾回收算法的各自优缺点，不同区域可以选择不同的垃圾回收算法。
+
+
+
