--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -63,5 +63,9 @@
 
 分代收集法是目前最常见的JVM垃圾回收策略，其思想是根据对象的不同生命周期将内存划分为不同的区域。一般划分为**新生代（Young Generation）**和**老年代（Tenured/Old Generation）**。新生代的特点是每次GC都会有大量对象被回收，而老年代每次GC时只有少量对象被回收。结合上述几种垃圾回收算法的各自优缺点，不同区域可以选择不同的垃圾回收算法。
 
+新生代适合复制算法，老年代适合标记清除法或标记整理法
+
+## 垃圾收集器
+
 
 
