jvm gc 垃圾收集器

--- a/Java/1.JVM/2.jvm-gc.md
+++ b/Java/1.JVM/2.jvm-gc.md
@@ -67,5 +67,34 @@
 
 ## 垃圾收集器
 
+JVM目前提供了多种垃圾收集器，大部分都是分代专用的。
 
+新生代：
 
+- Serial
+- ParNew
+- Parallel Scavenge
+
+老年代：
+
+- CMS
+- Serial Old
+- Parallel Old
+
+通用：
+
+- G1
+
+### Serial垃圾收集器
+
+Serial是最基础的垃圾收集器，它是单线程的，使用的是复制算法。由于是单线程的，在垃圾收集时，程序会暂停手上所有的工作线程（STW，Stop The World），直到垃圾收集结束。不过又由于单线程没有了上下文的切换，而且对于新生代来说，一般需要复制的对象比较少（存活对象较少），所以整体上Serial算是高效的，是比较适合新生代的垃圾收集器。
+
+![image-20210627215808998](assets/image-20210627215808998.png)
+
+### ParNew收集器
+
+ParNew是Serial的多线程版本，除了在垃圾收集时采用多线程，其余行为均与Serial完全相同。Par是指Parallel，并行的意思，这里的多线程并不是说垃圾采集与工作线程并发，在垃圾收集时同样需要STW。
+
+ParNew收集器会默认开启与CPU数量相同的线程数，也可以通过参数`-XX:ParallelGCThreads`来指定线程数。所以在多CPU的情况下，ParNew会比Serial效果要好，但在单CPU时，由于需要上下文切换，ParNew反而不如Serial。
+
+![image-20210627215947451](assets/image-20210627215947451.png)
