jvm class loading

--- a/Java/1.JVM/3.jvm-class-loading.md
+++ b/Java/1.JVM/3.jvm-class-loading.md
@@ -4,3 +4,32 @@ JVM会动态地***加载，连接，初始化***类与接口。
 
 ![image-20210702214154799](assets/image-20210702214154799.png)
 
+## 1 加载过程
+
+### 1.1 加载
+
+加载阶段jvm将class文件（也可能是其他途径的，比如从网络中获取、从加密文件中解密、运行时计算生成、JSP文件转换等）的类的信息加载到方法区中，然后在堆内存中生成一个java.lang.Class对象，作为这个类在方法区中信息的入口。
+
+### 1.2 验证
+
+该过程保证了类（或接口）的二进制信息的结构的正确性。比如校验每个方法是否有合法的方法签名。
+
+### 1.3 准备
+
+该过程为类（或接口）的静态变量分配内存并赋初始值。比如`static int a = 5;`，该过程会创建`a`，并赋初始值`0`而不是`5`。
+
+### 1.4 解析
+
+解析阶段是指将类型的常量池中的符号引用替换为直接引用的过程。
+
+> 符号引用，
+
+> 直接引用，
+
+### 1.5 初始化
+
+该阶段是加载过程的最后一步。之前在准备阶段，类的变量已经被赋过一次初始值，在这里，类变量会被赋实际值（可以理解为真正执行java代码）。除了赋值，该阶段还会执行静态语句块代码。子类的初始化会触发父类的初始化（第一个被初始化的肯定是java.lang.Object）。
+
+## 2 类加载器
+
+## 3 双亲委派模型
