jvm class loading

--- a/Java/1.JVM/3.jvm-class-loading.md
+++ b/Java/1.JVM/3.jvm-class-loading.md
@@ -8,23 +8,54 @@ JVM会动态地***加载，连接，初始化***类与接口。
 
 ### 1.1 加载
 
-加载阶段jvm将class文件（也可能是其他途径的，比如从网络中获取、从加密文件中解密、运行时计算生成、JSP文件转换等）的类的信息加载到方法区中，然后在堆内存中生成一个java.lang.Class对象，作为这个类在方法区中信息的入口。
+加载阶段jvm将class文件（也可能是其他途径的，比如从网络中获取、从加密文件中解密、运行时计算生成、JSP文件转换等）的类的信息加载到方法区中，然后在堆内存中生成一个`java.lang.Class`对象，作为这个类在方法区中信息的入口。
+
+加载阶段jvm做了三件事情：
+
+1. 通过一个类的全限定名来获取其对应的二进制流
+2. 将这个二进制流表达的静态数据结构转化为jvm方法区中的运行时数据结构
+3. 在堆中生成一个java.lang.Class对象，作为方法区中这个类信息的入口
+
+> 全限定名：带包路径的类名，比如`java.lang.String`
+
+1中为什么说是二进制流，因为被jvm加载的类信息的载体，除了最常见的class文件（包括jar包war包中的class文件）外，还可以从网络中获取（比如古董Applet）等。
 
 ### 1.2 验证
 
-该过程保证了类（或接口）的二进制信息的结构的正确性。比如校验每个方法是否有合法的方法签名。
+验证阶段保证了类（或接口）的二进制信息的结构的正确性，保证其能符合虚拟机的要求，不会对虚拟机带来危害。该阶段一般包含四个步骤：
+
+1. **文件格式验证**， 验证二进制流是否符合虚拟机规范，保证其能被当前虚拟机处理，能够正确地被解析并存储于方法区中。只有通过该阶段的验证，类（接口）信息才会进入方法区中存储。后续的验证都是基于方法区中存储的类（接口）信息。
+2. **元数据验证**，对类的元数据信息进行语义验证（就是对数据类型进行语法校验）。
+3. **字节码验证**，进行数据流和控制流分析。（方法体中的指令码操作流程分析，保证不会做危害虚拟机的行为）
+4. **符号引用验证**，在符号引用转换为直接引用的过程中，对类自身以外的信息进行匹配性校验。
 
 ### 1.3 准备
 
-该过程为类（或接口）的静态变量分配内存并赋初始值。比如`static int a = 5;`，该过程会创建`a`，并赋初始值`0`而不是`5`。
+该过程为类（或接口）的静态变量分配内存并赋初始值。比如`static int a = 5;`该过程会创建`a`，并赋初始值`0`而不是`5`。
+
+不过对于同时被`static`和`final`修饰的变量（常量），在准备阶段虚拟机会直接给其初始化为其指定的值。
+
+Java数据类型及其初始值：
+
+| 数据类型  |  初始值  |
+| :-------: | :------: |
+|    int    |    0     |
+|   long    |    0L    |
+|   short   | (short)0 |
+|   char    | '\u0000' |
+|   byte    | (byte)0  |
+|   float   |   0.0f   |
+|  double   |   0.0d   |
+| reference |   null   |
+|           |          |
 
 ### 1.4 解析
 
 解析阶段是指将类型的常量池中的符号引用替换为直接引用的过程。
 
-> 符号引用，
+> 符号引用（Symbolic References），以一组符号来描述所引用的目标, 符号可以是任何形式的字面量,只要使用时能够无歧义的定位到目标即可。
 
-> 直接引用，
+> 直接引用（Direct References），是直接指向目标的指针、相对偏移量或是一个能间接定位到目标的句柄。
 
 ### 1.5 初始化
 
