jvm class loading

--- a/Java/1.JVM/3.jvm-class-loading.md
+++ b/Java/1.JVM/3.jvm-class-loading.md
@@ -61,6 +61,51 @@ Java数据类型及其初始值：
 
 该阶段是加载过程的最后一步。之前在准备阶段，类的变量已经被赋过一次初始值，在这里，类变量会被赋实际值（可以理解为真正执行java代码）。除了赋值，该阶段还会执行静态语句块代码。子类的初始化会触发父类的初始化（第一个被初始化的肯定是java.lang.Object）。
 
+*当一个类被初始化，那么在其之前，它的父类会被初始化（如果之前未被初始化过的话）。*
+
+*当一个类被初始化，那么在其之前，它实现的接口中若有default方法的话，会被初始化（如果之前未被初始化过的话）。*
+
+> ```java
+> class Super {
+>     static { System.out.print("Super "); }
+> }
+> class One {
+>     static { System.out.print("One "); }
+> }
+> class Two extends Super {
+>     static { System.out.print("Two "); }
+> }
+> class Test {
+>     public static void main(String[] args) {
+>         One o = null;
+>         Two t = new Two();
+>         System.out.println((Object)o == (Object)t);
+>     }
+> }
+> ```
+>
+> 上述代码的打印结果是`Super Two false`。其中`One`类不会被初始化，由于其并未被有效地使用（没有被连接？）。此例演示了父类将在子类前被初始化。
+
+*当一个接口被初始化，**不会**触发父接口的初始化。*
+
+```java
+class Super {
+    static int taxi = 1729;
+}
+class Sub extends Super {
+    static { System.out.print("Sub "); }
+}
+class Test {
+    public static void main(String[] args) {
+        System.out.println(Sub.taxi);
+    }
+}
+```
+
+
+
+*当一个静态变量被引用，只有声明它的类或接口会被初始化（常量的引用不会导致这个行为）。*
+
 ## 2 类加载器
 
 ## 3 双亲委派模型
