--- a/Java/1.JVM/3.jvm-class-loading.md
+++ b/Java/1.JVM/3.jvm-class-loading.md
@@ -142,6 +142,12 @@ jj=4
 
 *`K.j`不是常量，所以导致了`J`的初始化，因为接口的初始化不会触发父或子接口的初始化，所以不会导致`I`或`K`的初始化；*
 
+参考：[Initialization of Classes and Interfaces](https://docs.oracle.com/javase/specs/jls/se8/html/jls-12.html#jls-12.4)
+
 ## 2 类加载器
+
+[TOC]
+
+
 
 ## 3 双亲委派模型
