--- a/Java/1.JVM/3.jvm-class-loading.md
+++ b/Java/1.JVM/3.jvm-class-loading.md
@@ -86,7 +86,7 @@ Java数据类型及其初始值：
  }
  ```
 
- *上述代码的打印结果是`Super Two false`。其中`One`类不会被初始化，由于其并未被有效地使用（没有被连接？）。此例演示了父类将在子类前被初始化。*
+ *上述代码的打印结果是`Super Two false`。其中`One`类不会被初始化，由于其并未被有效（主动）地使用（没有被连接？）。此例演示了父类将在子类前被初始化。*
 
 - **当一个接口被初始化，*不会*触发父接口的初始化。**
 
@@ -146,8 +146,27 @@ jj=4
 
 ## 2 类加载器
 
-[TOC]
+类加载器的任务是上述的“加载阶段”。JVM提供了三个类加载器：
 
+### 2.2 启动类加载器（Bootstrap）
 
+启动类加载器也叫根类加载器，它是用来加载Java的核心类，由C++实现，不继承java.lang.ClassLoader。负责加载`$JAVA_HOME/lib`下的核心类库，或是`-Xbootclasspath`参数指定的路径下的类库。
+
+### 2.3 扩展类加载器（Extention）
+
+`sun.misc.Launcher$ExtClassLoader`类，由Java实现。负责加载`$JAVA_HOME/lib/ext`下的类库，或是环境变量`java.ext.dir`指定路径下的类库。
+
+### 2.4 系统类加载器（Application）
+
+也称应用类加载器，是`sun.misc.Launcher$AppClassLoader`类，由Java实现。负责加载JVM启动参数`-classpath`或环境变量`java.class.path`指定路径下的类库，即是我们常说的**classpath**，我们开发过程中编写的类一般都由它来加载。可以通过`ClassLoader.getSystemClassLoader()`来获取到该类加载器。
 
 ## 3 双亲委派模型
+
+如果一个类加载器收到了加载类的请求，它先不会加载该类，而是将这个请求委托给父类加载器去执行，如果父类加载器仍有其父类加载器，则进一步向上委托。如果父类加载器可以完成类加载请求，则成功加载后返回；否则由子类加载器去尝试加载。
+
+![image-20210706233146979](assets/image-20210706233146979.png)
+
+双亲委派模型的优势：
+
+- 具备有优先级的层次关系，这种层次关系可以避免类的重复加载，如果一个类被父类成功加载，那么子类就不需要再加载一遍
+- 安全性考虑，如果用户打算加载带有恶意代码的类，比如重写了`java.lang.Integer`类，通过双亲委派模型向上委托到启动类加载器，发现已经加载过该类，便直接返回了
