--- a/Java/2.Java-Core/1.java-io-model.md
+++ b/Java/2.Java-Core/1.java-io-model.md
@@ -45,6 +45,17 @@
 
 程序发起`recvfrom`这个系统调用，内核开始第一个阶段：准备数据。比如udp连接，内核需要等待网络传过来的数据，凑够一个udp包。此时程序进程这边是一直阻塞的，等内核准备好数据，并复制到程序内存中，才返回结果，程序才解除阻塞状态。其对于应用程序来说数据准备阶段和数据复制阶段都是阻塞的。
 
+一份典型的阻塞io代码：
+
+```java
+Socket socket = new Socket("127.0.0.1", 8080);
+InputStream in = socket.getInputStream();
+byte[] buffer = new byte[1024];
+in.read(buffer);
+```
+
+这里的`in.read(buffer)`在等待数据时是阻塞的。当有多个连接时，每个连接都要对读操作单独开一个线程。连接数量大就懵逼了。
+
 ### 3.2 非阻塞IO
 
 非阻塞io的一次read操作大致如下：
@@ -52,4 +63,19 @@
 ![image-20210708145555625](assets/image-20210708145555625.png)
 
 程序发起`recvfrom`系统调用，内核开始准备数据，并立刻返回一个`EWOULDBLOCK`（Linux错误码，Operation would block）。对于程序来说，发起的read操作立刻得到了结果，没有发生阻塞，只不过数据没有准备好。此后应用程序可陆续发起`recvfrom`，直到内核数据准备好后，内核复制数据，复制好后返回ok。对于应用程序来说，只有数据复制阶段是阻塞的。
+
+JDK1.4以后提供了`java.nio`包，其中实现了以`Channel`为基础的非阻塞io，一份简单的非阻塞io代码如下：
+
+```Java
+SocketChannel channel = SocketChannel.open(new InetSocketAddress("127.0.0.1", 8080));
+channel.configureBlocking(false);
+ByteBuffer buffer = ByteBuffer.allocate(1024);
+channel.read(buffer);
+```
+
+这里的`SocketChannel.configureBlocking(false)`将io设置为**非阻塞模式**。`channel.read(buffer)`会立刻返回一个`int`，无数据的话返回0。
+
+### 3.3 多路复用IO
+
+
 
