java io model 多路复用io

--- a/Java/2.Java-Core/1.java-io-model.md
+++ b/Java/2.Java-Core/1.java-io-model.md
@@ -77,5 +77,10 @@ channel.read(buffer);
 
 ### 3.3 多路复用IO
 
+试想一下，如果我们想要解决n个连接n个线程的问题，阻塞io肯定是做不到了，但有了非阻塞io，我们能做些什么？如果我们有个n个连接的read场景，是不是可以这样做：
+
+1. 搞一个`SocketChannel`集合，每新建一个连接（`channel`），就把它放到集合中，这个操作是可以在一个线程中做的。
+2. 不断遍历这个集合，执行每个`channel`的`channel.read(buffer)`，处理成功`read`到的`buffer`，这样所有连接的读操作只用一个线程就可以完成。
+
 
 
