--- a/Java/2.Java-Core/1.java-io-model.md
+++ b/Java/2.Java-Core/1.java-io-model.md
@@ -82,5 +82,4 @@ channel.read(buffer);
 1. 搞一个`SocketChannel`集合，每新建一个连接（`channel`），就把它放到集合中，这个操作是可以在一个线程中做的。
 2. 不断遍历这个集合，执行每个`channel`的`channel.read(buffer)`，处理成功`read`到的`buffer`，这样所有连接的读操作只用一个线程就可以完成。
 
-
-
+但是这样有个明显的问题：当需要遍历的集合很大时，每次遍历将会非常缓慢。
