java io model 多路复用io

--- a/Java/2.Java-Core/1.java-io-model.md
+++ b/Java/2.Java-Core/1.java-io-model.md
@@ -83,3 +83,44 @@ channel.read(buffer);
 2. 不断遍历这个集合，执行每个`channel`的`channel.read(buffer)`，处理成功`read`到的`buffer`，这样所有连接的读操作只用一个线程就可以完成。
 
 但是这样有个明显的问题：当需要遍历的集合很大时，每次遍历将会非常缓慢。
+
+Linux底层支持io多路复用（jdk的io多路复用也是基于linux底层函数实现的）。其通过一种机制，监视多个*文件描述符*(内核利用文件描述符来访问文件，可以理解为某文件的索引)，一旦某个描述符就绪（可读或可写），通知应用程序执行对应的读写操作。相关的函数有`select`、`poll`、`epoll`。
+
+`select`函数简述：监视等待多个描述符的属性变化。程序调用`select`，linux将描述符集合从用户态复制到内核态，并在内核遍历所有描述符。能够监视的描述符数量有限制，一般为1024。由于存在复制与轮询检查，描述符数量越多，性能越差。
+
+`poll`函数简述：与`select`函数基本一样，区别在于`poll`没有文件描述符数量限制。其性能也与文件描述符数量挂钩。
+
+`epoll`函数简述：文件描述符的用户态至内核态的复制只有一次。用户注册需要监视的文件描述符，当某文件描述符就绪时，内核通过**回调机制**，在用户再次调用时，得到通知。`epoll`同样没有文件描述符数量限制，但其性能不会随描述符的数量增长而下降。`epoll`不需要轮询整个文件描述符集合，通过回调函数，就绪的文件描述符会被放入就绪的集合中，只需要遍历就绪的集合就行了。
+
+*详细参考：[Linux I/O多路复用](https://www.linuxprobe.com/linux-io-multiplexing.html)*
+
+JDK的多路复用io（`Selector`）的实现也是基于linux底层的，不同版本的jdk，使用的linux函数可能不同，常见的是`epoll`。（老版本的jdk可能用的是`select`或`poll`）
+
+一份典型的Java多路复用io写法：
+
+```java
+Selector selector = Selector.open();
+channel.configureBlocking(false); // channel必须设置为非阻塞
+SelectionKey readKey = channel.register(selector, SelectionKey.OP_READ);// 注册“读”事件
+readKey.attach(channel); // 将channel“附加”在key上，可通过key.attachment()直接拿到channel
+
+while(selector.select() > 0) {
+    Iterator<SelectionKey> iterator = selector.selectedKeys().iterator();
+    while (iterator.hasNext()) {
+        SelectionKey key = iterator.next();
+        if (key.isReadable()) {
+            // 处理读就绪的key
+        } else if (key.isWritable()) {
+            // 处理写就绪的key
+        } else if (key.isAcceptable()) {
+            // 处理server可接收的新连接的key
+        } else if (key.isConnectable()) {
+            // 处理可连接就绪的key
+        }
+        iterator.remove(); // Selector的就绪集合需要自己移除，以便下一轮Selector将新的就绪key放进去。
+    }
+}
+```
+
+​	`selector.select()`是阻塞的，只有在至少有一个就绪事件时，`select()`方法才会返回。`selectedKeys()`返回的就绪key集合，在每个就绪key处理完毕后，需要自己从集合中移除，Selector本身并不会做移除操作。
+
