--- a/Java/2.Java-Core/1.java-io-model.md
+++ b/Java/2.Java-Core/1.java-io-model.md
@@ -43,7 +43,7 @@
 
 ![image-20210708145649142](assets/image-20210708145649142.png)
 
-程序发起`recvfrom`这个系统调用，内核开始第一个阶段：准备数据。比如udp连接，内核需要等待网络传过来的数据，凑够一个udp包。此时程序进程这边是一直阻塞的，等内核准备好数据，并复制到程序内存中，才返回结果，程序才解除阻塞状态。其对于应用程序来说数据准备阶段和数据复制阶段都是阻塞的。
+程序发起`recvfrom`这个系统调用，内核开始第一个阶段：准备数据。比如udp连接，内核需要等待网络传过来的数据，凑够一个udp包。此时程序进程这边是一直阻塞的，等内核准备好数据，并复制到程序内存中，才返回结果，程序才解除阻塞状态。其对于应用程序来说**数据准备阶段和数据复制阶段都是阻塞的**。
 
 一份典型的阻塞io代码：
 
@@ -62,7 +62,7 @@ in.read(buffer);
 
 ![image-20210708145555625](assets/image-20210708145555625.png)
 
-程序发起`recvfrom`系统调用，内核开始准备数据，并立刻返回一个`EWOULDBLOCK`（Linux错误码，Operation would block）。对于程序来说，发起的read操作立刻得到了结果，没有发生阻塞，只不过数据没有准备好。此后应用程序可陆续发起`recvfrom`，直到内核数据准备好后，内核复制数据，复制好后返回ok。对于应用程序来说，只有数据复制阶段是阻塞的。
+程序发起`recvfrom`系统调用，内核开始准备数据，并立刻返回一个`EWOULDBLOCK`（Linux错误码，Operation would block）。对于程序来说，发起的read操作立刻得到了结果，没有发生阻塞，只不过数据没有准备好。此后应用程序可陆续发起`recvfrom`，直到内核数据准备好后，内核复制数据，复制好后返回ok。对于应用程序来说，**只有数据复制阶段是阻塞的**。
 
 JDK1.4以后提供了`java.nio`包，其中实现了以`Channel`为基础的非阻塞io，一份简单的非阻塞io代码如下：
 
@@ -88,13 +88,13 @@ Linux底层支持io多路复用（jdk的io多路复用也是基于linux底层函
 
 `select`函数简述：监视等待多个描述符的属性变化。程序调用`select`，linux将描述符集合从用户态复制到内核态，并在内核遍历所有描述符。能够监视的描述符数量有限制，一般为1024。由于存在复制与轮询检查，描述符数量越多，性能越差。
 
-`poll`函数简述：与`select`函数基本一样，区别在于`poll`没有文件描述符数量限制。其性能也与文件描述符数量挂钩。
+`poll`函数简述：与`select`函数基本一样，区别在于`poll`没有文件描述符数量限制。同样其性能也与文件描述符数量线性相关。
 
 `epoll`函数简述：文件描述符的用户态至内核态的复制只有一次。用户注册需要监视的文件描述符，当某文件描述符就绪时，内核通过**回调机制**，在用户再次调用时，得到通知。`epoll`同样没有文件描述符数量限制，但其性能不会随描述符的数量增长而下降。`epoll`不需要轮询整个文件描述符集合，通过回调函数，就绪的文件描述符会被放入就绪的集合中，只需要遍历就绪的集合就行了。
 
 *详细参考：[Linux I/O多路复用](https://www.linuxprobe.com/linux-io-multiplexing.html)*
 
-JDK的多路复用io（`Selector`）的实现也是基于linux底层的，不同版本的jdk，使用的linux函数可能不同，常见的是`epoll`。（老版本的jdk可能用的是`select`或`poll`）
+JDK的多路复用io（`Selector`）的实现就是基于linux底层的函数，不同版本的jdk，使用的linux函数可能不同，常见的是`epoll`。（老版本的jdk可能用的是`select`或`poll`）
 
 一份典型的Java多路复用io写法：
 
@@ -124,3 +124,18 @@ while(selector.select() > 0) {
 
 ​	`selector.select()`是阻塞的，只有在至少有一个就绪事件时，`select()`方法才会返回。`selectedKeys()`返回的就绪key集合，在每个就绪key处理完毕后，需要自己从集合中移除，Selector本身并不会做移除操作。
 
+### 3.4 信号驱动io
+
+应用程序向内核发起系统调用（`sigaction` ），该调用会立刻返回，不阻塞。在数据准备好后，内核向应用程序发起信号通知（`SIGIO` ），应用程序收到后即从内核复制数据，复制过程阻塞。
+
+![image-20210713224230302](assets/image-20210713224230302.png)
+
+整个过程中，数据准备阶段是非阻塞的，应用程序在请求完成后就可以做自己的事情。应用程序接收到数据就绪信号后，复制过程是阻塞的。
+
+### 3.5 异步io
+
+应用程序向内核发起系统调用（`aio_read`）立刻收到返回，不阻塞。内核等待数据（准备数据），数据就绪后，内核负责复制过程，等数据复制好后，通知应用程序io结束。
+
+![image-20210713224857106](assets/image-20210713224857106.png)
+
+异步 IO 与信号驱动 IO 的区别在于，异步 IO 的信号是通知应用进程 IO 完成，而信号驱动 IO 的信号是通知应用进程可以开始 IO（开始复制）。
