--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -79,3 +79,22 @@ executor.execute(()-> {
 ```
 
 线程池通过`execute`方法传入`Runnable`实例来提交执行线程（或是`submit Callable`）。
+
+## 2 线程的生命周期
+
+`java.lang.Thread.State`枚举定义了6个状态:
+
+- NEW - 新建
+- RUNNABLE - 运行
+- BLOCKED - 阻塞
+- WAITING - 等待
+- TIMED-WAITING - 限时等待
+- TERMINATED - 终止
+
+### 2.1 NEW - 新建
+
+**未调用`start()`方法**的线程，处于新建状态。
+
+### 2.2 RUNNABLE - 运行
+
+JVM正在执行中的线程，处于RUNNABLE状态。为什么JDK未定义running状态呢？
