--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -88,7 +88,7 @@ executor.execute(()-> {
 - RUNNABLE - 运行
 - BLOCKED - 阻塞
 - WAITING - 等待
-- TIMED-WAITING - 限时等待
+- TIMED-WAITING - 定时等待
 - TERMINATED - 终止
 
 ### 2.1 NEW - 新建
@@ -97,4 +97,9 @@ executor.execute(()-> {
 
 ### 2.2 RUNNABLE - 运行
 
-JVM正在执行中的线程，处于RUNNABLE状态。为什么JDK未定义running状态呢？
+JVM正在执行中的线程，处于RUNNABLE状态。从字面上看，这个状态是“可运行”的意思，为什么JDK未定义RUNNING状态呢？
+
+为了使单个CPU核心能承担多任务的运行，操作系统架构通常使用“**时间分片**”的方式实现。一个时间片的大小通常有几毫秒至几百毫秒，多个线程在一个核心上通过“抢占式轮询”的方式占有时间片，当前占用时间片的线程我们视其为RUNNING状态，而此时在等待队列中的线程，我们视其为READY状态。
+
+JVM将线程委托给系统内核调度，并将内核的线程状态映射成JVM的线程状态。JVM的线程状态一般用于监控，但严格按内核状态来映射的话，执行中的线程会在RUNNING状态和READY状态间来回切换，时间间隔可能也就几十毫秒，这似乎没什么意义。所以将其统称为RUNNABLE状态就够了。
+
