--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -103,3 +103,35 @@ JVM正在执行中的线程，处于RUNNABLE状态。从字面上看，这个状
 
 JVM将线程委托给系统内核调度，并将内核的线程状态映射成JVM的线程状态。JVM的线程状态一般用于监控，但严格按内核状态来映射的话，执行中的线程会在RUNNING状态和READY状态间来回切换，时间间隔可能也就几十毫秒，这似乎没什么意义。所以将其统称为RUNNABLE状态就够了。
 
+### 2.3 BLOCKED - 阻塞
+
+阻塞状态是个非活动状态。当线程等待获取锁来进入同步块/同步方法（`synchronized`）时，线程处于阻塞状态。
+
+### 2.4 WAITING - 等待
+
+等待状态是个非活动状态。使线程进入等待状态，有如下三种方法：
+
+- 调用无超时时间的`Object.wait()`方法
+- 调用无超时时间的`Thread.join()`方法
+- 调用`LockSupport.park()`方法
+
+处于等待状态的线程需要其他线程的**唤醒(`Object.notify()`)**来重新获得运行的资格。
+
+### 2.5 TIMED-WAITING - 定时等待
+
+定时等待状态也是个非活动状态。要进入定时等待状态，有下面几种方法：
+
+- 调用Thread.sleep()方法
+- 调用有超时时间的Object.wait()方法
+- 调用有超时时间的Thread.join()方法
+- 调用LockSupport.parkNanos()方法
+- 调用LockSupport.parkUtil()方法
+
+定时等待状态的线程，在到达超时时间后或被其他线程唤醒后，会恢复运行。
+
+### 2.6 TERMINATED - 终止
+
+执行结束的线程处于终止状态。
+
+### 2.7 阻塞与等待的区别
+
