--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -105,11 +105,11 @@ JVM将线程委托给系统内核调度，并将内核的线程状态映射成JV
 
 ### 2.3 BLOCKED - 阻塞
 
-阻塞状态是个非活动状态。当线程等待获取锁来进入同步块/同步方法（`synchronized`）时，线程处于阻塞状态。
+阻塞状态是个非活跃状态。当线程等待获取锁来进入同步块/同步方法（`synchronized`）时，线程处于阻塞状态。
 
 ### 2.4 WAITING - 等待
 
-等待状态是个非活动状态。使线程进入等待状态，有如下三种方法：
+等待状态是个非活跃状态。使线程进入等待状态，有如下三种方法：
 
 - 调用无超时时间的`Object.wait()`方法
 - 调用无超时时间的`Thread.join()`方法
@@ -119,7 +119,7 @@ JVM将线程委托给系统内核调度，并将内核的线程状态映射成JV
 
 ### 2.5 TIMED-WAITING - 定时等待
 
-定时等待状态也是个非活动状态。要进入定时等待状态，有下面几种方法：
+定时等待状态也是个非活跃状态。要进入定时等待状态，有下面几种方法：
 
 - 调用Thread.sleep()方法
 - 调用有超时时间的Object.wait()方法
@@ -134,4 +134,45 @@ JVM将线程委托给系统内核调度，并将内核的线程状态映射成JV
 执行结束的线程处于终止状态。
 
 ### 2.7 阻塞与等待的区别
+
+二者都是非活跃状态。`BLOCKED`状态的线程是想要进入`RUNNABLE`状态，但其在等待其他线程释放同步锁；`WAITING`状态的线程是主动退出了`RUNNABLE`状态，直到某个线程唤醒（`notify()`）它。
+
+*想要却得不到的与拥有的却不想要的？*
+
+### 2.8 关于JDK中BLOCKED状态的注释
+
+> A thread in the blocked state is waiting for a monitor lock to enter a synchronized block/method or reenter a synchronized block/method after calling Object.wait().
+
+源码中的这段`BLOCKED`状态枚举的注释我在一开始读时是比较懵逼的。前半段还好理解：`BLOCKED`状态的线程是在等待监视器锁，以进入一个同步块或同步方法。后半段就比较绕了：（`BLOCKED`状态的线程在等待监视器锁），以在调用完`Object.wait()`后，重新进入一个同步块或同步方法。
+
+没捋顺？我们先看一下`wait()`方法的注释：
+
+> ...The current thread must own this object's monitor. The thread releases ownership of this monitor and waits until another thread notifies threads waiting on this object's monitor to wake up either through a call to the notify method or the notifyAll method....
+>
+> ...（前提是）当前线程必须先占有该对象的监视器锁。线程先释放锁，然后等待某个线程调用`notify()`或`notifyAll()`方法来唤醒在等待该对象监视器锁的线程（们）。...
+
+现在我们知道了： 
+
+- **线程调用某对象wait()方法的前提是其必须占有该对象的监视器锁（同步锁）**
+- **线程执行wait()方法会释放该对象的锁**
+
+那么一段合理的调用`wait()`方法的代码应当是：
+
+```java
+Object lock = new Object();
+synchronized (lock) {
+    // do something...
+    lock.wait();
+    // do something...
+}
+```
+
+某对象`wait()`方法的调用，包含在该对象的同步块或同步方法中。一个线程能够执行到`.wait()`这行代码，必然意味着其已经获取到该对象的锁，也就是说已经进入到该同步块或同步方法中。那么我们来捋一捋线程的等待->唤醒的过程经历了什么：
+
+- 线程获取到锁对象的同步锁，（**第一次**）进入同步块/同步方法
+- 执行`wait()`方法，**线程释放该对象的锁**，进入等待队列
+- 其他线程调用`notify()`或`notifyAll()`方法，唤醒了该线程。线程想要回到同步块/同步方法中继续执行，但由于调用了`wait()`时已经释放了锁，此时该对象的同步锁可能由其他线程占有，所以该线程可能会进入`BLOCKED`状态与其他线程一同竞争同步锁
+- 线程竞争到同步锁，**重新**回到同步块/同步方法中，继续执行`.wait()`这行代码后面的内容
+
+现在回看`BLOCKED`状态的注释：*`BLOCKED`状态的线程在等待监视器锁，以在调用完`Object.wait()`后，重新进入一个同步块或同步方法*。是不是清晰多了？
 
