java thread stop

--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -167,7 +167,7 @@ synchronized (lock) {
 }
 ```
 
-某对象`wait()`方法的调用，包含在该对象的同步块或同步方法中。一个线程能够执行到`.wait()`这行代码，必然意味着其已经获取到该对象的锁，也就是说已经进入到该同步块或同步方法中。那么我们来捋一捋线程的等待->唤醒的过程经历了什么：
+对某对象`wait()`方法的调用，包含在该对象的同步块或同步方法中。一个线程能够执行到`.wait()`这行代码，必然意味着其已经获取到该对象的锁，也就是说已经进入到该同步块或同步方法中。那么我们来捋一捋线程的等待->唤醒的过程经历了什么：
 
 - 线程获取到锁对象的同步锁，（**第一次**）进入同步块/同步方法
 - 执行`wait()`方法，**线程释放该对象的锁**，进入等待队列
@@ -175,4 +175,14 @@ synchronized (lock) {
 - 线程竞争到同步锁，**重新**回到同步块/同步方法中，继续执行`.wait()`这行代码后面的内容
 
 现在回看`BLOCKED`状态的注释：*`BLOCKED`状态的线程在等待监视器锁，以在调用完`Object.wait()`后，重新进入一个同步块或同步方法*。是不是清晰多了？
+
+### 2.9 线程的终止
+
+有三种情况会导致线程进入终止状态：
+
+- 正常终止：`run()`方法或`call()`方法执行结束
+- 异常终止：`run()`方法或`call()`方法内部抛出一个未捕获的异常
+- 调用`stop()`：直接调用`Thread`的`stop()`方法会终止一个运行中的线程
+
+但需要注意的是`Thread`的`stop()`方法已经被`@Deprecated`。因为stop()方法就像拉闸断电，终止线程的同时会释放线程持有的所有锁。这很大概率会导致被锁保护的数据遭到破坏，形成结果不可控的场面。
 
