--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -184,5 +184,15 @@ synchronized (lock) {
 - 异常终止：`run()`方法或`call()`方法内部抛出一个未捕获的异常
 - 调用`stop()`：直接调用`Thread`的`stop()`方法会终止一个运行中的线程
 
-但需要注意的是`Thread`的`stop()`方法已经被`@Deprecated`。因为stop()方法就像拉闸断电，终止线程的同时会释放线程持有的所有锁。这很大概率会导致被锁保护的数据遭到破坏，形成结果不可控的场面。
+但需要注意的是`Thread`的`stop()`方法已经被`@Deprecated`。因为`stop()`方法就像拉闸断电，终止线程的同时会释放线程持有的所有锁。这很大概率会导致被锁保护的数据遭到破坏，形成结果不可控的场面。
+
+那么如何终止一个（长时间）运行中的线程呢？能够（可预见的）时间内运行结束的线程一般不需要去主动终止，长时间运行中的线程一般有几种情况：
+
+- 循环执行的任务
+- 线程处于io阻塞状态(BLOCKED)
+- 线程处于`WAITING`状态
+
+对于循环来讲，可以在每个循环中判断一个`flag`，通过其他线程变更`flag`的值，来中断循环，以走出`run()`方法或`call()`方法。
+
+对于阻塞或等待状态，`Thread`提供了`interrupt()`方法。
 
