--- a/Java/2.Java-Core/2.java-concurrency-thread.md
+++ b/Java/2.Java-Core/2.java-concurrency-thread.md
@@ -196,3 +196,9 @@ synchronized (lock) {
 
 对于阻塞或等待状态，`Thread`提供了`interrupt()`方法。
 
+### 2.10 wait()和sleep()的区别
+
+- `sleep()`是`Thread`类的静态方法，`wait()`是`Object`类的方法。
+- **`sleep()`不会释放锁，`wait()`会释放锁。**
+- `sleep()`需要捕获异常，`wait()`不需要。
+- `wait()`必须在同一个对象监视器锁的静态块或静态方法内，`sleep()`没这限制.
