java thread pool

--- a/Java/2.Java-Core/3.java-thread-pool.md
+++ b/Java/2.Java-Core/3.java-thread-pool.md
@@ -82,3 +82,7 @@ JDK推荐使用`java.util.concurrent.Executors`工厂类来创建线程池。常
 | newSingleThreadExecutor     | 1          | 1                 | -                      | LinkedBlockingQueue |
 | ScheduledThreadPoolExecutor | n          | Integer.MAX_VALUE | 永久                   | DelayedWorkQueue    |
 
+## 3 线程池执行任务的流程
+
+![image-20210723232653907](C:\Users\壮壮家\AppData\Roaming\Typora\typora-user-images\image-20210723232653907.png)
+
