java thread pool ctl

--- a/Java/2.Java-Core/3.java-thread-pool.md
+++ b/Java/2.Java-Core/3.java-thread-pool.md
@@ -69,9 +69,9 @@ JDK推荐使用`java.util.concurrent.Executors`工厂类来创建线程池。常
 
 这个工厂方法创建的线程池，使用了`FinalizableDelegatedExecutorService`包装类来保证线程池的配置不会被修改（比如增加线程数量）。
 
-### 2.4 ScheduledThreadPoolExecutor
+### 2.4 newScheduledThreadPool
 
-`Executors.ScheduledThreadPoolExecutor()`创建一个固定线程数量的的线程池，池中线程的存活保持时间被设置为永久。**该线程池支持定时及周期性地执行任务**。若线程池满了，新提交的任务会被放入`DelayedWorkQueue`队列。
+`Executors.newScheduledThreadPool()`创建一个固定线程数量的的线程池，池中线程的存活保持时间被设置为永久。**该线程池支持定时及周期性地执行任务**。若线程池满了，新提交的任务会被放入`DelayedWorkQueue`队列。
 
 ### 2.5 几个线程池的对比
 
@@ -86,3 +86,31 @@ JDK推荐使用`java.util.concurrent.Executors`工厂类来创建线程池。常
 
 ![image-20210723232653907](C:\Users\壮壮家\AppData\Roaming\Typora\typora-user-images\image-20210723232653907.png)
 
+## 4 ctl
+
+ctl是**线程池控制状态**，其用一个原子整型表达了两个信息：1. 有效线程数量；2. 线程池状态。
+
+> ```
+> /**
+>  * The main pool control state, ctl, is an atomic integer packing
+>  * two conceptual fields
+>  *   workerCount, indicating the effective number of threads
+>  *   runState,    indicating whether running, shutting down etc
+>  *
+> ```
+
+ctl将32位的整型分割为两个部分，前3位用于表示线程池的状态，后29位用于表示有效线程数量（也就是说目前的线程池最多支持(2^29)-1个线程）。
+
+![image-20210724233628546](C:\Users\壮壮家\AppData\Roaming\Typora\typora-user-images\image-20210724233628546.png)
+
+### 4.1 线程池运行状态
+
+JDK定义了五个线程池状态：
+
+- **RUNNING**： 接受新提交的任务，处理缓冲队列的任务
+- **SHUTDOWN**：拒绝新任务，处理缓冲队列的任务
+- **STOP**：拒绝新任务，停止处理缓冲队列的任务，并尝试interrupt执行中的任务
+- **TIDYING**：所有任务均被终止，有效线程数量为0，然后执行钩子函数`terminated()`
+- **TERMINATED**：钩子函数`terminated()`执行结束
+
+![image-20210724235605095](C:\Users\壮壮家\AppData\Roaming\Typora\typora-user-images\image-20210724235605095.png)
