java thread pool

--- a/Java/2.Java-Core/3.java-thread-pool.md
+++ b/Java/2.Java-Core/3.java-thread-pool.md
@@ -86,7 +86,7 @@ JDK推荐使用`java.util.concurrent.Executors`工厂类来创建线程池。常
 
 ![image-20210723232653907](assets/image-20210723232653907.png)
 
-## 4 ctl
+## 4 线程池控制状态ctl
 
 ctl是**线程池控制状态**，其用一个原子整型表达了两个信息：1. 有效线程数量；2. 线程池状态。
 
@@ -114,3 +114,32 @@ JDK定义了五个线程池状态：
 - **TERMINATED**：钩子函数`terminated()`执行结束
 
 ![image-20210724235605095](assets/image-20210724235605095.png)
+
+### 4.2 打包workerCount与runState
+
+```java
+private final AtomicInteger ctl = new AtomicInteger(ctlOf(RUNNING, 0));
+private static final int COUNT_BITS = Integer.SIZE - 3;
+private static final int CAPACITY   = (1 << COUNT_BITS) - 1;
+
+// runState is stored in the high-order bits
+private static final int RUNNING    = -1 << COUNT_BITS;
+private static final int SHUTDOWN   =  0 << COUNT_BITS;
+private static final int STOP       =  1 << COUNT_BITS;
+private static final int TIDYING    =  2 << COUNT_BITS;
+private static final int TERMINATED =  3 << COUNT_BITS;
+
+// Packing and unpacking ctl
+private static int runStateOf(int c)     { return c & ~CAPACITY; }
+private static int workerCountOf(int c)  { return c & CAPACITY; }
+private static int ctlOf(int rs, int wc) { return rs | wc; }
+```
+
+源码中五个状态（`runState`）分别分配为-1，0，1，2，3五个整数，并将其左移29位（32-3），所以其二进制表现为：
+
+![image-20210725230955171](assets/image-20210725230955171.png)
+
+然后在`ctlOf(int rs, int wc)`方法中，与线程数（`workerCount`）做**位或运算**，这就得到了ctl，其既能表达线程池状态，又能表达有效线程数，一个**RUNNING**状态的线程池，有效线程数为**3**，那么它的**ctl**将是：
+
+![image-20210725231943785](assets/image-20210725231943785.png)
+
