--- a/Java/2.Java-Core/3.java-thread-pool.md
+++ b/Java/2.Java-Core/3.java-thread-pool.md
@@ -147,6 +147,23 @@ private static int ctlOf(int rs, int wc) { return rs | wc; }
 
 关于线程池缓冲队列的策略，通常由三种：
 
-1. **直接提交（Direct handoffs）**，这是一种简单又直接的策略，比如使用`SynchronousQueue`。`SynchronousQueue`不缓冲任务（或者理解为缓冲数量为1个任务），若无线程从中消费的话，新提交任务会失败，导致新线程的创建。`SynchronousQueue`通常需要配置`maximumPoolSizes`数量为无限（`Integer.MAX_VALUE`），以免进入*拒绝策略*。
+1. **直接提交（Direct handoffs）**，这是一种简单又直接的策略，比如使用`SynchronousQueue`。`SynchronousQueue`不缓冲任务，新增操作必须等待对应的移除操作，反过来也一样，移除操作必须等待新增操作。其容量为0，可以理解为它只做一个“传递”动作。若无线程从中消费的话，新提交任务会失败，导致新线程的创建。`SynchronousQueue`通常需要配置`maximumPoolSizes`数量为无限（`Integer.MAX_VALUE`），以免进入*拒绝策略*。
+   这是execute()方法源码的一段节选：
+
+   ```java
+   // 前面是corePoolSize内的线程创建
+   ...
+   if (isRunning(c) && workQueue.offer(command)) {
+       // 线程数超过corePoolSize时，会尝试往缓冲队列workQueue里放任务。
+       // 若无空闲线程在消费workQueue（SynchronousQueue）时，
+       // workQueue.offer(command)h
+       ...
+   }
+   else if (!addWorker(command, false)) // workQueue放入失败，新增线程处理任务
+       reject(command); // 新增线程失败，走拒绝策略
+   ...
+   ```
+
 2. **无界队列（Unbounded queues）**，使用一个不设置容量的`LinkedBlockingQueue`，在核心线程数量的线程均busy的情况下，任务新提交的任务都会被缓存。也就是说这个线程池最多只会创建核心线程数量的线程，配置的`maximumPoolSize`将不起作用。
+
 3. **有界队列（Bounded queues）**，典型的例子是`ArrayBlockingQueue`(`Executors`工厂类中好像未用到这个队列)。使用有界队列有助于防止应用程序的资源耗尽（在配置了有限的`maximumPoolSize`的情况下）。不过队列的大小与线程池的大小比较难把握，大队列和小池子虽然能降低负载，减少上下文切换，但是明显降低了吞吐量；但是反过来，大池子可能会导致频繁的上下文切换，吞吐量可能更差。具体的配置搭配要结合实际情况考虑。
