java thread pool 更正SynchronousQueue的錯誤

--- a/Java/2.Java-Core/3.java-thread-pool.md
+++ b/Java/2.Java-Core/3.java-thread-pool.md
@@ -147,7 +147,7 @@ private static int ctlOf(int rs, int wc) { return rs | wc; }
 
 关于线程池缓冲队列的策略，通常由三种：
 
-1. **直接提交（Direct handoffs）**，这是一种简单又直接的策略，比如使用`SynchronousQueue`。`SynchronousQueue`不缓冲任务，新增操作必须等待对应的移除操作，反过来也一样，移除操作必须等待新增操作。其容量为0，可以理解为它只做一个“传递”动作。若无线程从中消费的话，新提交任务会失败，导致新线程的创建。`SynchronousQueue`通常需要配置`maximumPoolSizes`数量为无限（`Integer.MAX_VALUE`），以免进入*拒绝策略*。
+1. **直接提交（Direct handoffs）**，这是一种简单又直接的策略，比如使用`SynchronousQueue`。`SynchronousQueue`不缓冲任务，**新增操作时必须有对应的等待中的移除操作，否则会新增失败**。其容量为0，可以理解为它只做一个“传递”动作。若无线程从中消费的话，新提交任务会失败，导致新线程的创建。`SynchronousQueue`通常需要配置`maximumPoolSizes`数量为无限（`Integer.MAX_VALUE`），以免进入*拒绝策略*。
    这是execute()方法源码的一段节选：
 
    ```java
@@ -156,7 +156,7 @@ private static int ctlOf(int rs, int wc) { return rs | wc; }
    if (isRunning(c) && workQueue.offer(command)) {
        // 线程数超过corePoolSize时，会尝试往缓冲队列workQueue里放任务。
        // 若无空闲线程在消费workQueue（SynchronousQueue）时，
-       // workQueue.offer(command)h
+       // workQueue.offer(command)会返回false。
        ...
    }
    else if (!addWorker(command, false)) // workQueue放入失败，新增线程处理任务
