--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -12,3 +12,15 @@
 
 ![image-20210728233852182](assets/image-20210728233852182.png)
 
+悲观锁在Java中的应用有`sychronized`和`ReentrantLock`，乐观锁的应用有`AtomicInteger`等原子类。`AtomicInteger`主要是使用了**CAS**技术来实现原子新增的。
+
+CAS全称 Compare And Swap（比较与交换），是一种无锁算法。旨在不加锁的情况下（无阻塞）来实现多线程间的变量同步。CAS算法涉及三个变量：
+
+- 需要进行读写的变量V
+- 进行比较的值A
+- 打算写入的值B
+
+*当且仅当V的值等于A时，才允许用B来更新V的值。*这个比较+更新是一个**原子操作**，一般由系统内核提供。若比较时不相等，一般采取重试操作。
+
+
+
