--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -12,7 +12,7 @@
 
 ![image-20210728233852182](assets/image-20210728233852182.png)
 
-悲观锁在Java中的应用有`sychronized`和`ReentrantLock`，乐观锁的应用有`AtomicInteger`等原子类。`AtomicInteger`主要是使用了**CAS**技术来实现原子新增的。
+悲观锁在Java中的应用有`sychronized`和`ReentrantLock`，乐观锁的应用有`AtomicInteger`等原子类（`java.util.concurrent.atomic`包）。`AtomicInteger`主要是使用了**CAS**技术来实现原子新增的。
 
 CAS全称 Compare And Swap（比较与交换），是一种无锁算法。旨在不加锁的情况下（无阻塞）来实现多线程间的变量同步。CAS算法涉及三个变量：
 
@@ -20,7 +20,26 @@ CAS全称 Compare And Swap（比较与交换），是一种无锁算法。旨在
 - 进行比较的值A
 - 打算写入的值B
 
-*当且仅当V的值等于A时，才允许用B来更新V的值。*这个比较+更新是一个**原子操作**，一般由系统内核提供。若比较时不相等，一般采取重试操作。
+*当且仅当V的值等于A时，才允许用B来更新V的值。*这个比较+更新是一个**原子操作**，一般借助CPU指令完成。若比较时不相等，一般会采取重试操作。
 
+ `AtomicInteger`的自增函数`incrementAndGet()`中，使用的是`unsafe.getAndAddInt()`（`Unsafe`类是类似于C语言一样操作内存空间，其只是在JDK的某些地方用的，官方并不推荐开发者直接使用）。
 
+```java
+// ----------AtomicInteger----------
+public final int incrementAndGet() {
+    return unsafe.getAndAddInt(this, valueOffset, 1) + 1;
+}
+
+// ----------Unsafe.class(反编译)----------
+public final int getAndAddInt(Object var1, long var2, int var4) {
+    int var5;
+    do {
+        var5 = this.getIntVolatile(var1, var2);
+    } while(!this.compareAndSwapInt(var1, var2, var5, var5 + var4));
+
+    return var5;
+}
+```
+
+其先获取想要操作的内存地址上的值，`compareAndSwapInt()`借助底层的原子操作，比较内存地址上的值与预期的值是否相等，若相等则将该内存地址上的值替换为该值加1，并返回原来的值。若不相等，则重新获取该内存地址上的值，再`compareAndSwapInt`()，如此循环，直至替换成功。
 
