--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -45,4 +45,6 @@ public final int getAndAddInt(Object var1, long var2, int var4) {
 
 CAS虽然对比锁机制更高效，但仍然存在一些问题：
 
-- ABA问题。CAS在比较时，会拿修改前的值与当前值对比，比如修改前的值是A，现在也是A，就可以更新成功。但若在这期间有另一个线程将其更新为了B，又将其更新为了A，这样也能更新成功，这就有问题了。
+- **ABA问题**。CAS在比较时，会拿修改前的值与当前值对比，比如修改前的值是A，现在也是A，就可以更新成功。但若在这期间有另一个线程将其更新为了B，又将其更新为了A，这样也能更新成功，这就有问题了。解决办法是给值加上版本号，每次更新把版本号加一。
+- **循环开销问题**。若CAS一直不能更新成功，它就会一直在那自旋，浪费CPU资源。解决办法是给自旋次数设置上限，自旋次数达到上限后，挂起线程。
+
