--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -48,3 +48,15 @@ CAS虽然对比锁机制更高效，但仍然存在一些问题：
 - **ABA问题**。CAS在比较时，会拿修改前的值与当前值对比，比如修改前的值是A，现在也是A，就可以更新成功。但若在这期间有另一个线程将其更新为了B，又将其更新为了A，这样也能更新成功，这就有问题了。解决办法是给值加上版本号，每次更新把版本号加一。
 - **循环开销问题**。若CAS一直不能更新成功，它就会一直在那自旋，浪费CPU资源。解决办法是给自旋次数设置上限，自旋次数达到上限后，挂起线程。
 
+## 2 自旋锁与适应性自旋锁
+
+线程的上下文切换是消耗CPU资源的，如果持有锁的线程能够在短时间内释放资源，那么竞争该资源的其他线程在获取锁失败后，不进入阻塞挂起状态，它们只需要等一等（自旋），等资源释放后立刻获取锁。这样用自旋的小消耗来换上下文切换的大消耗。
+
+但是自旋锁本身并不能代替阻塞，自旋锁只是用自旋的消耗来替代上下文切换的消耗，若自旋的消耗更大的话（持有锁的线程长时间占有锁导致较长的自旋时间），就非常不划算了。
+
+所以自旋必须有个限度，给自旋锁限定一个次数上限，若自旋次数达到上限后仍未获得锁，就挂起线程。
+
+> -XX:PreBlockSpin=10 // 设置自旋次数上限10次
+
+JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一次在同一个锁上的自旋时间及锁的拥有者的状态来决定**。对于同一个锁对象，如果短时间内有成功通过自旋获取到锁，且目前持有者正在运行，那么就认为下一次自旋很可能成功，允许其自旋更多次数。但若这个锁对象很少有通过自旋获取到锁，便可以认为下一次自旋不太可能成功，就直接放弃自旋，进入阻塞状态。
+
