Java lock  无锁、偏向锁、轻量级锁、重量级锁

--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -1,6 +1,6 @@
 # Java锁
 
-### 1 乐观锁与悲观锁
+## 1 乐观锁与悲观锁
 
 乐观锁与悲观锁只是广义上的锁的概念，并非具体的锁的实现。二者概念上的区别在于对待操作同步资源时对于竞争的态度。
 
@@ -59,4 +59,20 @@ CAS虽然对比锁机制更高效，但仍然存在一些问题：
 > -XX:PreBlockSpin=10 // 设置自旋次数上限10次
 
 JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一次在同一个锁上的自旋时间及锁的拥有者的状态来决定**。对于同一个锁对象，如果短时间内有成功通过自旋获取到锁，且目前持有者正在运行，那么就认为下一次自旋很可能成功，允许其自旋更多次数。但若这个锁对象很少有通过自旋获取到锁，便可以认为下一次自旋不太可能成功，就直接放弃自旋，进入阻塞状态。
+
+## 3 无锁、偏向锁、轻量级锁、重量级锁
+
+这四种锁指的是synchronized锁的几种状态。
+
+我们先从“对象头”讲起，什么是“对象头”？通过前面的讲的，我们现在知道了synchronized锁是悲观锁，我们在操作同步资源之前，会先将同步资源加锁，这个锁就是加在同步资源的对象头上。对象头主要包括两部分数据：**Mark Word（标记字段）**、**Klass Pointer（类型指针）**。
+
+- **Mark Word（标记字段）**：无锁时默认存储的是对象的hashCode、分代年龄及锁标志位信息。这里存储的内容会随着锁状态的变化而变化。
+- **Klass Pointer（类型指针）**：存储着指向方法区中对象对应类信息的指针。
+
+|  锁状态  |                                          Mark Word (64 bits) |
+| :------: | -----------------------------------------------------------: |
+|   无锁   | 对象hashCode、分代年龄、是否是偏向锁biased_lock(0)\|锁标志位lock(01) |
+|  偏向锁  | 偏向线程ID、偏向时间戳、对象分代年龄、是否是偏向锁biased_lock(1)\|锁标志位lock(01) |
+| 轻量级锁 |                   指向（栈中）锁记录的指针\|锁标志位lock(00) |
+| 重量级锁 |                         指向重量级锁的指针\|锁标志位lock(10) |
 
