--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -76,9 +76,13 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 | 轻量级锁 |                   指向（栈中）锁记录的指针\|锁标志位lock(00) |
 | 重量级锁 |          指向重量级锁（monitor对象）的指针\|锁标志位lock(10) |
 
-synchronized底层是通过monitor（监视器锁）来实现的。在JVM中，每一个对象都会对应一个monitor，在javap反编译的字节码中我们能看到同步语句块的实现使用的是`monitorenter`和`monitorexit`指令。当执行`monitorenter`指令时，当前线程会尝试获取锁对象对应的monitor的所有权，若monitor的计数器为0，那么线程将成功获取monitor的所有权，并将monitor的计数器记为1。若当前线程已经持有了该monitor，再执行`monitorenter`时，将monitor计数器加1（可重入锁）。若当前monitor已被其他线程占有，则进入阻塞状态，直到该monitor的计数器变为0，再尝试重新获取monitor的所有权。
+### 3.1 monitor（监视器锁）
+
+在JVM中，每一个对象都会对应一个monitor，在javap反编译的字节码中我们能看到同步语句块的实现是使用`monitorenter`和`monitorexit`指令（对于同步方法，jvm）。当执行`monitorenter`指令时，当前线程会尝试获取锁对象对应的monitor的所有权，若monitor的计数器为0，那么线程将成功获取monitor的所有权，并将monitor的计数器记为1。若当前线程已经持有了该monitor，再执行`monitorenter`时，将monitor计数器加1（可重入锁）。若当前monitor已被其他线程占有，则进入阻塞状态，直到该monitor的计数器变为0，再尝试重新获取monitor的所有权。
 
 执行`monitorexit`的线程必须是该monitor的所有者，执行后将monitor的计数器减1，若减1后计数器变为0，该线程则退出该monitor，放弃所有权，其他阻塞的线程开始尝试获取所有权。
+
+在JDK1.6以前，`synchronized`的底层实现是简单粗暴地用monitor来做的，阻塞和唤醒线程的开销可能比同步块内的代码执行的开销还要大，效率低下。为了优化，JDK1.6中引入了“偏向锁”和“轻量级锁”
 
 
 
