java lock 四种锁状态

--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -76,13 +76,31 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 | 轻量级锁 |                   指向（栈中）锁记录的指针\|锁标志位lock(00) |
 | 重量级锁 |          指向重量级锁（monitor对象）的指针\|锁标志位lock(10) |
 
-### 3.1 monitor（监视器锁）
+### 3.1 重量级锁、monitor
 
-在JVM中，每一个对象都会对应一个monitor，在javap反编译的字节码中我们能看到同步语句块的实现是使用`monitorenter`和`monitorexit`指令（对于同步方法，jvm只是给方法信息打了个同步标识，隐式地操作monitor的进出）。当执行`monitorenter`指令时，当前线程会尝试获取锁对象对应的monitor的所有权，若monitor的计数器为0，那么线程将成功获取monitor的所有权，并将monitor的计数器记为1。若当前线程已经持有了该monitor，再执行`monitorenter`时，将monitor计数器加1（可重入锁）。若当前monitor已被其他线程占有，则进入阻塞状态，直到该monitor的计数器变为0，再尝试重新获取monitor的所有权。
+在JVM中，每一个对象都有一个对应的monitor（监视器锁），在javap反编译字节码的信息中我们能看到同步语句块的实现是使用`monitorenter`和`monitorexit`指令（对于同步方法，jvm只是给方法信息做了个同步标识`ACC_SYNCHRONIZED`，隐式地操作monitor的进出）。当执行`monitorenter`指令时，当前线程会尝试获取锁对象对应的monitor的所有权，若monitor的计数器为0，那么线程将成功获取monitor的所有权，并将monitor的计数器记为1。若当前线程已经持有了该monitor，再执行`monitorenter`时，将monitor计数器加1（可重入锁）。若当前monitor已被其他线程占有，则进入阻塞状态，直到该monitor的计数器变为0，再尝试重新获取monitor的所有权。
 
 执行`monitorexit`的线程必须是该monitor的所有者，执行后将monitor的计数器减1，若减1后计数器变为0，该线程则退出该monitor，放弃所有权，其他阻塞的线程开始尝试获取所有权。
 
-在JDK1.6以前，`synchronized`的底层实现是简单粗暴地直接用monitor来做的，阻塞和唤醒线程的开销可能比同步块内的代码执行的开销还要大，效率低下。为了优化，JDK1.6中引入了“偏向锁”和“轻量级锁”。这四个所状态地级别从第到高依次是无锁、偏向锁、轻量级锁、重量级锁，锁状态只能升级不能降级。
+这种方式的加锁就是**重量级锁**，被锁的锁对象的`Mark Word`中存储了指向了对应monitor的指针。除了当前获取到锁的线程，所有等待锁的线程都会被挂起（进入阻塞状态）。
+
+在JDK1.6以前，`synchronized`的底层实现是简单粗暴地直接用monitor来做的，阻塞和唤醒线程的开销可能比同步块内的代码执行的开销还要大，效率低下。为了优化，JDK1.6中引入了“偏向锁”和“轻量级锁”。锁状态的级别从低到高依次是无锁、偏向锁、轻量级锁、重量级锁，有锁的状态（后三个）只能升级不能降级。
+
+### 3.2 轻量级锁
+
+区别于重量级锁，轻量级锁状态时，所有等待的线程**不会**进入阻塞状态，取而代之的是通过自旋的形式尝试获取锁，减少了线程阻塞与唤醒的开销。
+
+
 
 ### 3.1 无锁
+
+无锁状态也是对象的平常的状态，没有线程对它锁定，一个无锁状态的对象能够被所有的线程访问且修改。
+
+无锁状态下的对象也能做到安全地共享，比如上面讲的CAS，线程不断地尝试修改共享对象，若有版本冲突则继续重试，直到修改成功退出，同一时刻只有一个线程能够修改成功。
+
+### 3.2 偏向锁
+
+线程在执行同步方法或同步块时，总是需要加锁和释放锁。在竞争不激烈甚至不存在竞争时，一段时间内一个锁总是被同一个线程多次占有（有文章讲有研究发现大多数的情况下都是这样），每次的加锁和释放锁就成了多余的消耗，偏向锁的出现解决了这个问题。
+
+当一个线程获取到锁时，会在锁对象的`Mark Word`里记录指向当前线程的线程id，并将是否是偏向锁biased_lock标记为1。
 
