--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -90,7 +90,18 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 
 区别于重量级锁，轻量级锁状态时，所有等待的线程**不会**进入阻塞状态，取而代之的是通过自旋的形式尝试获取锁，减少了线程阻塞与唤醒的开销。
 
+轻量级锁加锁步骤：
 
+1. 代码执行到同步块，若锁对象的Mark Word中的锁标志位是"01"的话，JVM会在当前线程的栈中创建一条名为**lock**的记录（锁记录lock record）。这个记录用来存储当前锁对象的Mark Word的拷贝，官方称之为**Displaced Mark Word**。
+2. CAS操作尝试讲锁对象的Mark Word替换为锁标志位"00"与指向lock record的指针。
+3. 若操作成功，则加锁成功，当前线程持有锁。
+4. 若操作失败，JVM先检查当前线程是否已经持有该锁，若是则直接进入同步块执行代码。否则说明存在竞争，有其他线程抢先占有了该锁，此时轻量级锁将会膨胀为重量级锁。
+
+轻量级锁解锁步骤：
+
+1. CAS操作将Mark Word替换为锁记录lock record中存储的加锁前的Mark Word内容。
+2. 替换成功，结束。
+3. 替换失败，说明在持有锁期间有其他线程尝试获取锁并失败，将锁膨胀为了重量级锁，这样的话就执行释放锁。
 
 ### 3.1 无锁
 
