--- a/Java/2.Java-Core/4.java-lock.md
+++ b/Java/2.Java-Core/4.java-lock.md
@@ -103,6 +103,8 @@ JDK1.6引入了适应性自旋锁，其自旋的次数不在固定，**由前一
 2. 替换成功，结束。
 3. 替换失败，说明在持有锁期间有其他线程尝试获取锁并失败，将锁膨胀为了重量级锁，这样的话就执行释放锁。
 
+*参考：[JAVA Introduction to lightweight lock](https://www.iodraw.com/en/blog/200844756)*
+
 ### 3.1 无锁
 
 无锁状态也是对象的平常的状态，没有线程对它锁定，一个无锁状态的对象能够被所有的线程访问且修改。
